bad/reachability_half_comptime_binop_and_02.example_compiler_output
ERROR
[1mbad/reachability_half_comptime_binop_and_02.lat:4:1: [1;31merror: [0;1mfunction does not return a value in all control paths[m
int main() {
[1;32m^[m
